--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,13 +2,17 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 
 include_directories(.)
 include_directories(./common)
+include_directories(./common/logger)
 
-aux_source_directory(./common LIB_SRC)
-message(${LIB_SRC})
+aux_source_directory(./common LIBBEE_SRC)
+message(${LIBBEE_SRC})
+add_library(bee SHARED ${LIBBEE_SRC})
 
-add_library(bee SHARED ${LIB_SRC})
+aux_source_directory(./common/logger LIBLOG_SRC)
+message(${LIBLOG_SRC})
+add_library(log SHARED ${LIBLOG_SRC})
 
-set(LIB_LIB pthread bee)
+set(LIB_LIB pthread bee log)
 
 add_executable(cassobee main.cpp)
 add_dependencies(cassobee bee)
