--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
     "git.ignoreLimitWarning": true,
     "cmake.sourceDirectory": "/home/qinchao/cassobee/",
+
     // [[General]]
     "breadcrumbs.filePath": "on", // 控制是否及如何在“导航路径”视图中显示文件路径
+
     // window
     "window.commandCenter": true,
     "window.restoreWindows": "all",
     "window.titleBarStyle": "native",
     "window.menuBarVisibility": "hidden",
+
     // editor
     "editor.inlayHints.enabled": "off",
     "editor.minimap.renderCharacters": false,
@@ -32,16 +35,19 @@
         "numbers": "#f73131", // 数字
         "types": "#6afc35", //类定义颜色
     },
+
     // workbench
     "workbench.startupEditor": "none", // 在没有从上一个会话恢复出信息的情况下，在启动时不打开编辑器
     "workbench.iconTheme": "vs-seti",
     "workbench.colorTheme": "Default Dark Modern",
     "workbench.view.alwaysShowHeaderActions": true, // 显示视图头部的操作项
     "workbench.settings.editor": "json", // 默认打开 settings.json 进行设置
-    "workbench.editor.historyBasedLanguageDetection": true, // 允许语言检测使用编辑器历史记录
+    "workbench.editor.historyBasedLanguageDetection": true, // 允许语言检测使用编辑器历史记
+
     // debug
     "debug.console.acceptSuggestionOnEnter": "on", // 调试控制台中可以用 enter 接受建议
     "debug.internalConsoleOptions": "neverOpen", // 从不自动打开内部调试控制台
+
     // editor
     "editor.acceptSuggestionOnEnter": "on", // 编辑器中可以用 enter 接受建议
     "editor.stickyScroll.enabled": false, // 启用粘滞滚动，即显示上一级对应的代码
@@ -74,13 +80,16 @@
         "other": true, // 键入其他时允许
         //"strings": false // 键入字符串时不允许
     },
+
     // explorer
     "explorer.confirmDragAndDrop": false, // 移动文件时无需确认
     "explorer.confirmDelete": false, // 删除文件确认
     "explorer.incrementalNaming": "smart", // 粘贴同名文件时的重命名方式;smart: 在重复名称末尾智能地添加/递增数字
+
     // files
     "files.autoSave": "afterDelay", // 自动保存
     "files.hotExit": "onExitAndWindowClose", // 在会话间记住未保存的文件,允许在退出编辑器时跳过保存提示 onExitAndWindowClose: 退出或窗口关闭时
+
     // notebook
     "notebook.lineNumbers": "on", // 控制单元格编辑器中行号的显示
     // 应该在何处显示单元格工具栏，或是否隐藏它
@@ -88,6 +97,7 @@
         "default": "right", // 默认: 右边
         "jupyter-notebook": "left" // jupyter-notebook: 左边
     },
+
     // search
     "search.showLineNumbers": true, // 显示搜索结果所在行号
     "search.smartCase": true, // 当搜索词为小写时，则不区分大小写进行搜索，否则区分大小写
@@ -96,8 +106,10 @@
         // "someFolder/": true,
         // "somefile": true
     },
+
     // output
     "output.smartScroll.enabled": true, // 输出窗口智能滚动：点击时锁定，点击最后一行时解锁
+
     // problems
     "problems.showCurrentInStatus": true, // 在状态栏显示当前问题
     "problems.sortOrder": "position", // 控制问题导航的显示顺序
@@ -105,6 +117,21 @@
     "security.workspace.trust.untrustedFiles": "open",
     "extensions.ignoreRecommendations": true,
     "http.proxySupport": "on",
+
+    // fileheader
+    "fileheader.cursorMode": {
+        "description": "", // 函数注释生成之后，光标移动到这里
+        "param": "", // param 开启函数参数自动提取 需要将光标放在函数行或者函数上方的空白行
+        "return": "",
+    },
+    // "fileheader.customMade": {
+    //     "Author": "cassobee",
+    //     "Date": "",
+    //     "LastEditors": "",
+    //     "LastEditTime": "",
+    //     "Description": "",
+    // },
+
     // [[XMake]]
     "xmake.debugConfigType": "codelldb", // 使用 codelldb 插件而非 cpptools 进行调试
     "xmake.runMode": "buildRun", // 运行前自动 build
@@ -112,6 +139,7 @@
     "xmake.customDebugConfig": {
         "console": "integratedTerminal" // XMake调试时使用集成终端而非 debug console,也可以使用 externalTerminal
     },
+
     // [[C++]]
     // clangd
     "clangd.path": "/home/qinchao/.vscode-server/data/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/17.0.3/clangd_17.0.3/bin/clangd", // clangd 路径
@@ -167,6 +195,7 @@
     "clangd.serverCompletionRanking": true, // 借助网上的信息排序建议
     "clangd.detectExtensionConflicts": true, // 当其它拓展与 clangd 冲突时警告并建议禁用
     "editor.suggest.snippetsPreventQuickSuggestions": false, // clangd的snippets有很多的跳转点，不用这个就必须手动触发Intellisense了
+
     // [[LLDB]]
     // "lldb.commandCompletions": true, // LLDB 指令自动补全
     // "lldb.dereferencePointers": true, // LLDB 指针显示解引用内容
@@ -180,6 +209,7 @@
     },
     "python.venvPath": "~/Code/python/pyvenvs", // Python 虚拟环境所在路径
     "python.analysis.typeCheckingMode": "basic",
+
     // [[Haskell]]
     // "haskell.ghcupExecutablePath": "C:/ghcup/bin/ghcup.exe",
     // "haskell.manageHLS": "GHCup",
