--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -9,7 +9,7 @@ poolsize = 4096
 poolsize = 4096
 dir = /home/qinchao/cassobee/debug/logdir
 filename = trace
-pattern = [%d{%Y-%m-%d %H:%M:%S}] [%p] [%c] %t %f:%l: %m%n
+pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 asynclog = true
 interval = 5000
 threshold = 4096
