--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,11 +4,13 @@ include_directories(.
                     ./common
                     ./common/io
                     ./common/logger
+                    ./common/traits
                     ./common/utility
 )
 
 aux_source_directory(./common LIBBEE_SRC)
 aux_source_directory(./common/io LIBBEE_SRC)
+aux_source_directory(./common/traits LIBBEE_SRC)
 aux_source_directory(./common/utility LIBBEE_SRC)
 message("libbee source: " ${LIBBEE_SRC})
 add_library(bee SHARED ${LIBBEE_SRC})
