--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -15,8 +15,10 @@ include_directories(.
                     ./common/logger
                     ./common/traits
                     ./common/utility
+                    ./common/security
 )
 
+# libbee
 aux_source_directory(./common LIBBEE_SRC)
 aux_source_directory(./common/io LIBBEE_SRC)
 aux_source_directory(./common/traits LIBBEE_SRC)
@@ -24,9 +26,15 @@ aux_source_directory(./common/utility LIBBEE_SRC)
 message("libbee source: " ${LIBBEE_SRC})
 add_library(bee SHARED ${LIBBEE_SRC})
 
+# liblog
 aux_source_directory(./common/logger LIBLOG_SRC)
 message("liblog source: " ${LIBLOG_SRC})
 add_library(log SHARED ${LIBLOG_SRC})
+
+# libsecurity
+aux_source_directory(./common/security LIBSECURITY_SRC)
+message("libsecurity source: " ${LIBSECURITY_SRC})
+add_library(security SHARED ${LIBSECURITY_SRC})
 
 set(LIB_LIB pthread bee log)
 
