--- a/source/benchmark/CMakeLists.txt
+++ b/source/benchmark/CMakeLists.txt
@@ -1,4 +1,6 @@
 
 add_executable(bench bench.cpp)
+add_dependencies(bench benchmark benchmark_main)
 
 target_link_libraries(bench benchmark benchmark_main)
+target_link_libraries(bench bee log)
