--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -14,6 +14,10 @@ asynclog = true
 interval = 5000
 threshold = 4096
 
+[client]
+version = 4
+read_buffer_size = 4194304
+write_buffer_size = 4194304
 
 
 
