--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -15,7 +15,9 @@ interval = 5000
 threshold = 4096
 
 [client]
+socktype = tcp
 version = 4
+port = 30900
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
