--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -15,10 +15,10 @@ asynclog = true
 interval = 5000
 threshold = 4096
 
-[client]
+[client_manager]
 socktype = tcp
 version = 4
-port = 30900
+port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
