--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SOURCE_PATH             ${CASSOBEE_ROOT_PATH}/source)
 set(THIRDPARTY_PATH         ${CASSOBEE_ROOT_PATH}/thirdparty)
 set(EXECUTABLE_OUTPUT_PATH  ${CASSOBEE_ROOT_PATH}/debug)
 set(LIBRARY_OUTPUT_PATH     ${CASSOBEE_ROOT_PATH}/debug/libs)
+set(BINARY_PATH             ${CASSOBEE_ROOT_PATH}/bin)
+set(TOOLS_PATH               ${CASSOBEE_ROOT_PATH}/tools)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(CASSOBEE_BENCHMARK_ENABLE "enable benchmark test" OFF)
