gen startup script

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,7 +12,7 @@ endfunction()
 function(gen_startup_script target)
     add_custom_command(
         OUTPUT ${BINARY_PATH}/run_${target}.sh ${BINARY_PATH}/gdbrun_${target}.sh
-        COMMAND ${CMAKE_COMMAND} -E env python3 ${TOOLS_PATH}/build_tool/gen_startup_script.py ${target} ${BINARY_PATH}
+        COMMAND ${CMAKE_COMMAND} -E env python3 ${TOOLS_PATH}/build_tool/gen_startup_script.py ${EXECUTABLE_OUTPUT_PATH} ${BINARY_PATH} ${target} ${CONFIG_PATH} ${DEBUG_PATH}
         DEPENDS ${target} ${TOOLS_PATH}/build_tool/gen_startup_script.py
         #COMMENT Generating run_${target}.sh and gdbrun_${target}.sh
     )
