--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@ project(cassobee)
 message("Use ${CMAKE_CXX_COMPILER_ID} compiler to build this project.")
 
 set(CASSOBEE_ROOT_PATH      ${CMAKE_CURRENT_SOURCE_DIR})
+set(CONFIG_PATH             ${CASSOBEE_ROOT_PATH}/config)
 set(SOURCE_PATH             ${CASSOBEE_ROOT_PATH}/source)
 set(THIRDPARTY_PATH         ${CASSOBEE_ROOT_PATH}/thirdparty)
 set(EXECUTABLE_OUTPUT_PATH  ${CASSOBEE_ROOT_PATH}/debug)
+set(DEBUG_PATH              ${CASSOBEE_ROOT_PATH}/debug)
 set(LIBRARY_OUTPUT_PATH     ${CASSOBEE_ROOT_PATH}/debug/libs)
 set(BINARY_PATH             ${CASSOBEE_ROOT_PATH}/bin)
-set(TOOLS_PATH               ${CASSOBEE_ROOT_PATH}/tools)
+set(TOOLS_PATH              ${CASSOBEE_ROOT_PATH}/tools)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(CASSOBEE_BENCHMARK_ENABLE "enable benchmark test" OFF)
