组织目录结构

--- a/config/client.conf
+++ b/config/client.conf
@@ -5,12 +5,9 @@ groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (52428
 interval = 50
 poolsize = 4096
 
-[client_manager]
+[server_manager]
 socktype = tcp
 version = 4
 port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
-
-
-
