--- a/source/client/CMakeLists.txt
+++ b/source/client/CMakeLists.txt
@@ -1,4 +1,10 @@
 # client exe
-add_executable(client client.cpp)
 
-add_dependencies(client prot)
+set(CLIENT_DEPEND_LIB bee security prot)
+
+add_executable(client client.cpp)
+add_dependencies(client ${CLIENT_DEPEND_LIB})
+target_link_libraries(client pthread ${CLIENT_DEPEND_LIB})
+
+add_common_flags(client)
+gen_startup_script(client)
