--- a/source/bee/CMakeLists.txt
+++ b/source/bee/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 # liblog
 set(LIBLOG_SRC ./log/log.cpp)
 message("liblog source: " ${LIBLOG_SRC})
@@ -8,13 +7,11 @@ target_include_directories(log
                            ${SOURCE_PATH}/bee/common
                            ${SOURCE_PATH}/bee/io
                            ${SOURCE_PATH}/bee/traits
+                           ${SOURCE_PATH}/bee/utility
+                           ${SOURCE_PATH}/protocol/
                            ${SOURCE_PATH}/protocol/include
 )
-
-# set(LIBLOG_DEPEND_LIB prot)
-# add_dependencies(log ${LIBLOG_DEPEND_LIB})
-# target_link_libraries(log ${LIBLOG_DEPEND_LIB})
-# add_common_flags(log)
+add_common_flags(log)
 
 # libsecurity
 aux_source_directory(./security LIBSECURITY_SRC)
