--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -5,12 +5,23 @@ groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (52428
 interval = 50
 poolsize = 4096
 
+[reactor]
+demultiplexer = epoller
+use_timer_thread = true
+timeout = 1000
+
 [log]
 loglevel = 0
-poolsize = 4096
 dir = /home/qinchao/cassobee/debug/logdir
 filename = trace
 pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 asynclog = true
 interval = 5000
 threshold = 4096
+
+[logclient]
+socktype = tcp
+version = 4
+port = 8880
+read_buffer_size = 4194304
+write_buffer_size = 4194304
