--- a/source/logserver/CMakeLists.txt
+++ b/source/logserver/CMakeLists.txt
@@ -1,8 +1,13 @@
-file(GLOB LOGSERVER_SRC ${SOURCE_PATH}/logserver/*.cpp)
-
-set(LOGSERVER_DEPEND_LIB bee prot)
+file(GLOB_RECURSE LOGSERVER_SRC ${SOURCE_PATH}/logserver/*.cpp)
+message("logserver source: " ${LOGSERVER_SRC})
 
 add_executable(logserver logserver.cpp ${LOGSERVER_SRC})
+target_include_directories(logserver
+                           PRIVATE
+                           ${SOURCE_PATH}/logserver/network
+)
+
+set(LOGSERVER_DEPEND_LIB bee prot)
 add_dependencies(logserver ${LOGSERVER_DEPEND_LIB})
 target_link_libraries(logserver ${LOGSERVER_DEPEND_LIB})
 
