--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -5,7 +5,22 @@ groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (52428
 interval = 50
 poolsize = 4096
 
-[client_manager]
+[reactor]
+demultiplexer = epoller
+use_timer_thread = true
+timeout = 1000
+
+[log]
+loglevel = 0
+
+[logserver]
+socktype = tcp
+version = 4
+port = 8880
+read_buffer_size = 4194304
+write_buffer_size = 4194304
+
+[client]
 socktype = tcp
 version = 4
 port = 8888
