--- a/config/client.conf
+++ b/config/client.conf
@@ -5,7 +5,12 @@ groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (52428
 interval = 50
 poolsize = 4096
 
-[server_manager]
+[reactor]
+demultiplexer = epoller
+use_timer_thread = true
+timeout = 1000
+
+[server]
 socktype = tcp
 version = 4
 port = 8888
