fix cc_changelist read, fix log process_name

--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -12,6 +12,7 @@ timeout = 1000
 
 [log]
 loglevel = 0
+pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 
 [logserver]
 socktype = tcp
