log, perf, flamegraph

--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -1,5 +1,5 @@
 [threadpool]
-groups = (524288, 1)
+groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4)
 
 [timer]
 interval = 50
@@ -15,7 +15,7 @@ loglevel = 0
 dir = /home/qinchao/cassobee/debug/logdir
 filename = trace
 pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
-asynclog = true
+asynclog = false
 interval = 5000
 threshold = 4096
 
