oncpu-flamegraph/offcpu-flamegraph

--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -15,7 +15,7 @@ loglevel = 0
 dir = /home/qinchao/cassobee/debug/logdir
 filename = trace
 pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
-asynclog = false
+asynclog = true
 interval = 5000
 threshold = 4096
 
