--- a/config/client.conf
+++ b/config/client.conf
@@ -10,6 +10,17 @@ demultiplexer = epoller
 use_timer_thread = true
 timeout = 1000
 
+[log]
+loglevel = 0
+pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
+
+[logserver]
+socktype = tcp
+version = 4
+port = 8880
+read_buffer_size = 4194304
+write_buffer_size = 4194304
+
 [server]
 socktype = tcp
 version = 4
