--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,14 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.language=c++
 sonar.sources=./source
+
 #files to be handled by the cxx plugin
-sonar.
+#sonar.
 sonar.cxx.file.suffixes=.cxx,.cpp,.cc,.c,.hxx,.h,.hh,.hpp,.handled
-sonar.exclusions=,
+#sonar.exclusions=,
+
+# clang-tidy 报告路径
+sonar.cxx.clangtidy.reportPaths=debug/clang-tidy-report.txt
+
 #include path
 #sonar.cxx.includeDirectories=/usr/include,/usr/include/c++/9
